# internship-task

./: .env  README.md  agent.config.yaml  pyproject.toml  requirements.txt
backend/: package-lock.json  package.json  server.js
backend/middlewares/: auth.js  rareLimiter.js
backend/models/: Character.js  Webtoon.js
backend/routes/: webtoons.js
frontend/: app.js  index.html  style.css
tests/: test_planner.py
voice_agent/: __init__.py  __main__.py  agent.py  config.py  planner.py  security.py  tts.py
voice_agent/tools/: code.py  system.py  web.py
