[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "voice-agent"
version = "0.1.0"
description = "Voice-driven system assistant prototype"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Your Team" }
]
dependencies = []

[project.urls]
Homepage = "https://example.com"

[tool.hatch.build.targets.wheel]
packages = ["voice_agent"]